--- a/app/routes/index.css
+++ b/app/routes/index.css
@@ -50,6 +50,7 @@
   border: none;
   border-radius: 0.5rem;
   background: hsl(0 0% var(--lightness) / 0.5);
+  padding-inline-end: 2.5rem;
 }
 
 .search-list {
